[tool.poetry]
name = "canvas-todoist"
version = "0.1.0"
description = ""
authors = ["Miles Glapa-Grossklag <miles@glapa-grossklag.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
canvasapi = "^2.2.0"
todoist-api-python = "^1.1.1"
rich = "^12.1.0"
typer = "^0.4.1"
shellingham = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
